--- a/index.html
+++ b/index.html
@@ -54,20 +54,28 @@
       </div> -->
       <!-- メインビジュアルが２つの場合 -->
       <div class="main">
-        <div class="main_edge blue_bg"></div>
+        <div class="main_edge blue_bg">
+          <!-- <p class="id">interaction design</p> -->
+        </div>
         <div class="main_flex">
           <div class="main_visual center">
             <img src="../assets/img/24_id.png" alt="情デ メインビジュアル" />
           </div>
-          <div class="main_blank blue_bg"></div>
+          <div class="main_blank blue_bg">
+            <p class="id">interaction design</p>
+          </div>
         </div>
         <div class="main_flex">
-          <div class="main_blank green_bg"></div>
+          <div class="main_blank green_bg">
+            <p class="ma">media art</p>
+          </div>
           <div class="main_visual center">
             <img src="../assets/img/24_ma.png" alt="メ芸 メインビジュアル" />
           </div>
         </div>
-        <div class="main_edge green_bg"></div>
+        <div class="main_edge green_bg">
+          <!-- <p class="ma">media art</p> -->
+        </div>
       </div>
       <div class="links navy_bg">
         <!-- 年度とwebサイトののリンクを上側に来るよう追加してください -->
