--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- メインビジュアルが２つの場合 -->
       <div class="main">
         <div class="main_edge blue_bg">
-          <!-- <p class="id">interaction design</p> -->
+          <p class="id">interaction design</p>
         </div>
         <div class="main_flex">
           <div class="main_visual center">
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="main_edge green_bg">
-          <!-- <p class="ma">media art</p> -->
+          <p class="ma">media art</p>
         </div>
       </div>
       <div class="links navy_bg">
