--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      IDD GRADUATE SCHOOL TAMA ART UNIVERSITY MEDIA ARTS and INTERACTION DESIGN RESEARCH and PRODUCTION EXHIBITION Archives | 多摩美術大学大学院 情報デザイン研究領域 研究制作展 アーカイブ
+      IDD portal
     </title>
     <meta property="og:title" content="IDD GRADUATE SCHOOL TAMA ART UNIVERSITY MEDIA ARTS and INTERACTION DESIGN RESEARCH and PRODUCTION EXHIBITION Archives" />
     <meta
       property="og:description"
-      content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 アーカイブ"
+      content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
     />
     <meta property="og:image" content="/assets/images/idd_img/ogp.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="IDD GRADUATE SCHOOL TAMA ART UNIVERSITY MEDIA ARTS and INTERACTION DESIGN RESEARCH and PRODUCTION EXHIBITION Archives" />
+    <meta property="og:site_name" content="IDD portal" />
     <meta
       name="description"
-      content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 アーカイブ"
+      content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
     />
     <link
       rel="shortcut icon"
@@ -32,6 +32,17 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="../assets/scss/style.css" />
     <script src="../js/adobeFonts.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/kps0ynj.css">
+    <script>
+      (function(d) {
+        var config = {
+          kitId: 'irb8rkb',
+          scriptTimeout: 3000,
+          async: true
+        },
+        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+      })(document);
+    </script>
   </head>
 
   <body class="blur">
@@ -40,7 +51,7 @@
   </div> -->
     <div class="header center">
       <!-- IDD GS TAU Exh info -->
-      IDD portal
+      IDD<br>portal
     </div>
     <div class="flex">
       <!-- 正方形のメインビジュアルを最新のものに差し替えてください -->
@@ -110,7 +121,7 @@
         </a>
         <div class="link_caption center green_bg">
           <p class="caption">
-            メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　　　　 ~ 3/9(日)<br />時間：11:00 ~ 19:00<br />会場：BankART KAIKO
+            メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 ~ 3/9(日)<br />時間：11:00 ~ 19:00<br />会場：BankART KAIKO
           </a></p>
         </div>
         <a href="https://inter.idd-master.art/">
