--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         </a>
         <div class="link_caption center green_bg">
           <p class="caption">
-            メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 ~ 3/9(日)<br />時間：11:00 ~ 19:00<br />会場：BankART KAIKO
+            メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 ~ 3/9(日)<br />時間：11:00 ~ 19:00<br />( 最終日 11:00 ~ 18:00 )<br />会場：BankART KAIKO
           </a></p>
         </div>
-        <a href="https://inter.idd-master.art/">
+        <a href="https://megeimaster.wixsite.com/iddartmaster">
           <div class="link_visual center">
             <img src="../assets/img/24_ma.png" alt="メ芸 2025 リンク" />
           </div>
