--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <img src="../assets/img/24_id.png" alt="情デ 2025 リンク" />
           </div>
         </a>
-        <a href="https://inter.idd-master.art/">
+        <a href="https://megeimaster.wixsite.com/iddartmaster">
           <div class="link_visual center">
             <img src="../assets/img/24_ma.png" alt="メ芸 2025 リンク" />
           </div>
