--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     />
     <link
       rel="shortcut icon"
-      href="../assets/images/idd_img/favicon.svg"
+      href="../assets/img/favicon.ico"
       type="image/vnd.microsoft.icon"
     />
     <link
       rel="icon"
-      href="../assets/images/idd_img/favicon.svg"
+      href="../assets/img/favicon.ico"
       type="image/vnd.microsoft.icon"
     />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -50,8 +50,9 @@
     多摩美術大学大学院 情報デザイン研究領域 研究制作展info
   </div> -->
     <div class="header center">
+      <img class="logo" src="../assets/img/logo.png" alt="IDD portal" />
       <!-- IDD GS TAU Exh info -->
-      IDD<br>portal
+      <!-- IDD<br>portal -->
     </div>
     <div class="flex">
       <!-- 正方形のメインビジュアルを最新のものに差し替えてください -->
