--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="link_caption center blue_bg">
           <p class="caption">
-            情報デザイン<br />「render」<a class="left">会期：2025/2/28(金)<br />　　　　　 ~ 3/2(日)<br />時間：11:00 ~ 18:00<br />会場：町田パリオ
+            情報デザイン<br />「render」<a class="left">会期：2025/2/28(金)<br />　　　　　 &ndash; 3/2(日)<br />時間：11:00 &ndash; 18:00<br />会場：町田パリオ
           </a>
         </p>
         </div>
@@ -122,7 +122,7 @@
         </a>
         <div class="link_caption center green_bg">
           <p class="caption">
-            メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 ~ 3/9(日)<br />時間：11:00 ~ 19:00<br />( 最終日 11:00 ~ 18:00 )<br />会場：BankART KAIKO
+            メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 &ndash; 3/9(日)<br />時間：11:00 &ndash; 19:00<br />( 最終日 11:00 &ndash; 18:00 )<br />会場：BankART KAIKO
           </a></p>
         </div>
         <a href="https://megeimaster.wixsite.com/iddartmaster">
