--- a/index.html
+++ b/index.html
@@ -110,10 +110,14 @@
           <p class="head">What's new</p>
         </div>
         <div class="link_caption center blue_bg">
-          <p class="caption">
+          <!-- <p class="caption">
             情報デザイン<br />「render」<a class="left">会期：2025/2/28(金)<br />　　 　 　 &ndash; 3/2(日)<br />時間：11:00 &ndash; 18:00<br />会場：町田パリオ
           </a>
-        </p>
+        </p> -->
+        <p class="caption">
+          interaction design<br />"render"<a class="left">Date : 2025.2.28 Fri.&ndash;3.2 Sun.<br />Time : 11:00&ndash;18:00<br />Location : MACHIDA PARIO
+        </a>
+      </p>
         </div>
         <a href="https://25.idd-master.com/">
           <div class="link_visual center">
@@ -121,8 +125,11 @@
           </div>
         </a>
         <div class="link_caption center green_bg">
-          <p class="caption">
+          <!-- <p class="caption">
             メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 &ndash; 3/9(日)<br />時間：11:00 &ndash; 19:00<br />( 最終日 11:00 &ndash; 18:00 )<br />会場：BankART KAIKO
+          </a></p> -->
+          <p class="caption">
+            media art<br />"render"<a class="left">Date：2025.3.7 Fri.&ndash;3.9 Sun.<br />Time : 11:00&ndash;19:00<br />　　　 last day 11:00&ndash;18:00<br />Location : BankART KAIKO
           </a></p>
         </div>
         <a href="https://megeimaster.wixsite.com/iddartmaster">
