--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 &ndash; 3/9(日)<br />時間：11:00 &ndash; 19:00<br />( 最終日 11:00 &ndash; 18:00 )<br />会場：BankART KAIKO
           </a></p> -->
           <p class="caption">
-            media art<br />"render"<a class="left">Date：2025.3.7 Fri.&ndash;3.9 Sun.<br />Time : 11:00&ndash;19:00<br />　　　 last day 11:00&ndash;18:00<br />Location : BankART KAIKO
+            media art<br />"render"<a class="left">Date : 2025.3.7 Fri.&ndash;3.9 Sun.<br />Time : 11:00&ndash;19:00<br />　　　 last day 11:00&ndash;18:00<br />Location : BankART KAIKO
           </a></p>
         </div>
         <a href="https://megeimaster.wixsite.com/iddartmaster">
