--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </a>
         </p> -->
         <p class="caption">
-          interaction design<br />"render"<a class="left">Date : 2025.2.28 Fri.&ndash;3.2 Sun.<br />Time : 11:00&ndash;18:00<br />Venue : MACHIDA PARIO
+          Interaction Design Program<br />"render"<a class="left">Date : 2025.2.28 Fri.&ndash;3.2 Sun.<br />Time : 10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
         </a>
       </p>
         </div>
@@ -129,7 +129,7 @@
             メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 &ndash; 3/9(日)<br />時間：11:00 &ndash; 19:00<br />( 最終日 11:00 &ndash; 18:00 )<br />会場：BankART KAIKO
           </a></p> -->
           <p class="caption">
-            media art<br />"render"<a class="left">Date : 2025.3.7 Fri.&ndash;3.9 Sun.<br />Time : 11:00&ndash;19:00<br />　　　 last day 11:00&ndash;18:00<br />Venue : BankART KAIKO
+            Art and Media Program<br />"render"<a class="left">Date : 2025.3.7 Fri.&ndash;3.9 Sun.<br />Time : 11:00&ndash;19:00<br />　　　 last day 11:00&ndash;18:00<br />Venue : BankART KAIKO
           </a></p>
         </div>
         <a href="https://megeimaster.wixsite.com/iddartmaster">
@@ -198,7 +198,7 @@
           <div class="link_head white navy_bg center">
             <p class="copyright">
               多摩美術大学大学院 情報デザイン研究領域 研究制作展
-              <br />Copyright © 2024 Tama Art University, Graduate School of Art
+              <br />Copyright © 2024-2025 Tama Art University, Graduate School of Art
               and Design. ALL RIGHTS RESERVED.
             </p>
           </div>
