--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </a>
         </p> -->
         <p class="caption">
-          Interaction Design Program<br />"render"<a class="left">Date : 2025.2.28 Fri.&ndash;3.2 Sun.<br />Time : 10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
+          Interaction Design Program<br />"RENDER"<a class="left">Date : 2025.2.28 Fri.&ndash;3.2 Sun.<br />Time : 10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
         </a>
       </p>
         </div>
