--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <p class="id">interaction design</p>
         </div>
         <div class="main_flex">
-          <div class="main_visual center">
-            <img src="../assets/img/24_id.png" alt="情デ メインビジュアル" />
+          <div class="main_visual center blue_bg">
+            <img src="../assets/img/26_id.jpg" alt="情デ メインビジュアル" />
           </div>
           <div class="main_blank blue_bg">
             <p class="id">interaction design</p>
@@ -81,8 +81,8 @@
           <div class="main_blank green_bg">
             <p class="ma">media art</p>
           </div>
-          <div class="main_visual center">
-            <img src="../assets/img/24_ma.png" alt="メ芸 メインビジュアル" />
+          <div class="main_visual center green_bg">
+            <img src="../assets/img/25_ma.png" alt="メ芸 メインビジュアル" />
           </div>
         </div>
         <div class="main_edge green_bg">
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="links navy_bg">
-        <!-- 年度とwebサイトののリンクを上側に来るよう追加してください -->
+        <!-- 年度とwebサイトのリンクを上側に来るよう追加してください -->
 
         <!-- <div class="link_visual center border">
         <p class="year">2026</p>
@@ -107,7 +107,7 @@
       </a> -->
 
         <div class="link_head center white navy_bg">
-          <p class="head">What's new</p>
+          <p class="head">What's new for 2026</p>
         </div>
         <div class="link_caption center blue_bg">
           <!-- <p class="caption">
@@ -115,26 +115,29 @@
           </a>
         </p> -->
         <p class="caption">
-          Interaction Design Program<br />"RENDER"<a class="left">Date : 2025.2.28 Fri.&ndash;3.2 Sun.<br />Time : 10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
+          Interaction Design Program<br />"PRISM"<a class="left">Date : 2026.3.20 Fri.&ndash;3.22 Sun.<br />Time : 10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
         </a>
       </p>
         </div>
-        <a href="https://25.idd-master.com/">
-          <div class="link_visual center">
-            <img src="../assets/img/24_id.png" alt="情デ 2025 リンク" />
+        <a href="https://26.idd-master.com/">
+          <div class="link_visual center blue_bg">
+            <img src="../assets/img/26_id.jpg" alt="情デ 2026 リンク" />
           </div>
         </a>
         <div class="link_caption center green_bg">
           <!-- <p class="caption">
             メディア芸術<br />「render」<a class="left">会期：2025/3/7(金)<br />　　 　 　 &ndash; 3/9(日)<br />時間：11:00 &ndash; 19:00<br />( 最終日 11:00 &ndash; 18:00 )<br />会場：BankART KAIKO
           </a></p> -->
+          <!-- <p class="caption">
+            Art and Media Program<br />"Vertex"<a class="left">Date : 2026.2.14 Sat.&ndash;2.15 Sun.<br />Time : 12:00&ndash;20:00<br />　　　 last day 11:00&ndash;18:00<br />Venue : Art Center NEW B1F
+          </a></p> -->
           <p class="caption">
-            Art and Media Program<br />"render"<a class="left">Date : 2025.3.7 Fri.&ndash;3.9 Sun.<br />Time : 11:00&ndash;19:00<br />　　　 last day 11:00&ndash;18:00<br />Venue : BankART KAIKO
+            Art and Media Program<br />"Vertex"<a class="left">Date : 2026.2.14 Sat.&ndash;2.15 Sun.<br />Time : 12:00&ndash;20:00<br />Venue : Art Center NEW
           </a></p>
         </div>
-        <a href="https://megeimaster.wixsite.com/iddartmaster">
-          <div class="link_visual center">
-            <img src="../assets/img/24_ma.png" alt="メ芸 2025 リンク" />
+        <!-- <a href="https://megeimaster.wixsite.com/iddartmaster"> -->
+          <div class="link_visual center green_bg">
+            <img src="../assets/img/25_ma.png" alt="メ芸 2026 リンク" />
           </div>
         </a>
         <div class="link_head center white navy_bg">
@@ -155,37 +158,54 @@
           </div>
         </a> -->
 
+        <!-- <div class="link_year center border navy white_bg">
+          <p class="year">2026</p>
+        </div>
+        <a href="https://26.idd-master.com/">
+          <div class="link_visual center border blue">
+            <img src="../assets/img/26_id.jpg" alt="情デ 2026 リンク" />
+          </div>
+        </a>
+        <a href="https://megeimaster.wixsite.com/iddartmaster">
+          <div class="link_visual center border green">
+            <img src="../assets/img/26_ma.jpg" alt="メ芸 2026 リンク" />
+          </div>
+        </a> -->
+
         <div class="link_year center border navy white_bg">
           <p class="year">2025</p>
         </div>
         <a href="https://25.idd-master.com/">
-          <div class="link_visual center">
-            <img src="../assets/img/24_id.png" alt="情デ 2025 リンク" />
+          <div class="link_visual center border blue">
+            <img src="../assets/img/25_id.png" alt="情デ 2025 リンク" />
           </div>
         </a>
         <a href="https://megeimaster.wixsite.com/iddartmaster">
-          <div class="link_visual center">
-            <img src="../assets/img/24_ma.png" alt="メ芸 2025 リンク" />
+          <div class="link_visual center border green">
+            <img src="../assets/img/25_ma.png" alt="メ芸 2025 リンク" />
           </div>
         </a>
+
+        <!-- <div class="link_year center navy_bg">
+        </div> -->
 
         <div class="link_year center border navy white_bg">
           <p class="year">2024</p>
         </div>
         <a href="https://24.idd-master.com/">
-          <div class="link_visual center">
-            <img src="../assets/img/23_id.png" alt="情デ 2025 リンク" />
+          <div class="link_visual center border blue">
+            <img src="../assets/img/24_id.png" alt="情デ 2024 リンク" />
           </div>
         </a>
         <a href="https://inter.idd-master.art/">
-          <div class="link_visual center">
-            <img src="../assets/img/23_ma.png" alt="メ芸 2025 リンク" />
+          <div class="link_visual center border green">
+            <img src="../assets/img/24_ma.png" alt="メ芸 2024 リンク" />
           </div>
         </a>
         <!-- <div class="link_caption center navy_bg">
       </div> -->
 
-        <!-- 年度とwebサイトののリンクを追加したら、.fotterのwidthを調整してください-->
+        <!-- 年度とwebサイトのリンクを追加したら、.fotterのwidthを調整してください-->
 
         <!-- <a href="https://www.idd.tamabi.ac.jp/graduateschool/">
         <div class="fotter navy_bg center">
