adjustment index.html

--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
         <div class="link_year center border navy white_bg">
           <p class="year">2025</p>
         </div>
+        <div class="blank center">
+        </div>
         <a href="https://25.idd-master.com/">
           <div class="link_visual center border blue">
             <img src="../assets/img/25_id.png" alt="情デ 2025 リンク" />
@@ -191,6 +193,8 @@
 
         <div class="link_year center border navy white_bg">
           <p class="year">2024</p>
+        </div>
+        <div class="blank center">
         </div>
         <a href="https://24.idd-master.com/">
           <div class="link_visual center border blue">
