--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="main_flex">
           <div class="main_visual center blue_bg">
-            <img src="../assets/img/26_id.jpg" alt="情デ メインビジュアル" />
+            <img src="../assets/img/25_id.jpg" alt="情デ メインビジュアル" />
           </div>
           <div class="main_blank blue_bg">
             <p class="id">interaction design</p>
@@ -82,7 +82,7 @@
             <p class="ma">media art</p>
           </div>
           <div class="main_visual center green_bg">
-            <img src="../assets/img/25_ma.png" alt="メ芸 メインビジュアル" />
+            <img src="../assets/img/24_ma.png" alt="メ芸 メインビジュアル" />
           </div>
         </div>
         <div class="main_edge green_bg">
@@ -107,7 +107,7 @@
       </a> -->
 
         <div class="link_head center white navy_bg">
-          <p class="head">What's new for 2026</p>
+          <p class="head">What's New for AY2025</p>
         </div>
         <div class="link_caption center blue_bg">
           <!-- <p class="caption">
@@ -121,7 +121,7 @@
         </div>
         <a href="https://26.idd-master.com/">
           <div class="link_visual center blue_bg">
-            <img src="../assets/img/26_id.jpg" alt="情デ 2026 リンク" />
+            <img src="../assets/img/25_id.jpg" alt="情デ 2026 リンク" />
           </div>
         </a>
         <div class="link_caption center green_bg">
@@ -137,7 +137,7 @@
         </div>
         <!-- <a href="https://megeimaster.wixsite.com/iddartmaster"> -->
           <div class="link_visual center green_bg">
-            <img src="../assets/img/25_ma.png" alt="メ芸 2026 リンク" />
+            <img src="../assets/img/24_ma.png" alt="メ芸 2026 リンク" />
           </div>
         </a>
         <div class="link_head center white navy_bg">
@@ -173,18 +173,18 @@
         </a> -->
 
         <div class="link_year center border navy white_bg">
-          <p class="year">2025</p>
+          <p class="year">AY2024</p>
         </div>
         <div class="blank center">
         </div>
         <a href="https://25.idd-master.com/">
           <div class="link_visual center border blue">
-            <img src="../assets/img/25_id.png" alt="情デ 2025 リンク" />
+            <img src="../assets/img/24_id.png" alt="情デ 2025 リンク" />
           </div>
         </a>
         <a href="https://megeimaster.wixsite.com/iddartmaster">
           <div class="link_visual center border green">
-            <img src="../assets/img/25_ma.png" alt="メ芸 2025 リンク" />
+            <img src="../assets/img/24_ma.png" alt="メ芸 2025 リンク" />
           </div>
         </a>
 
@@ -192,18 +192,18 @@
         </div> -->
 
         <div class="link_year center border navy white_bg">
-          <p class="year">2024</p>
+          <p class="year">AY2023</p>
         </div>
         <div class="blank center">
         </div>
         <a href="https://24.idd-master.com/">
           <div class="link_visual center border blue">
-            <img src="../assets/img/24_id.png" alt="情デ 2024 リンク" />
+            <img src="../assets/img/23_id.png" alt="情デ 2024 リンク" />
           </div>
         </a>
         <a href="https://inter.idd-master.art/">
           <div class="link_visual center border green">
-            <img src="../assets/img/24_ma.png" alt="メ芸 2024 リンク" />
+            <img src="../assets/img/23_ma.png" alt="メ芸 2024 リンク" />
           </div>
         </a>
         <!-- <div class="link_caption center navy_bg">
