--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       property="og:description"
       content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
     />
-    <meta property="og:image" content="/assets/images/idd_img/ogp.png" />
+    <meta property="og:image" content="https://portal.idd-master.com/assets/img/ogp.png" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="IDD portal" />
     <meta
