--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      IDD portal
-    </title>
-    <meta property="og:title" content="IDD GRADUATE SCHOOL TAMA ART UNIVERSITY MEDIA ARTS and INTERACTION DESIGN RESEARCH and PRODUCTION EXHIBITION Archives" />
+    <title>IDD Portal</title>
+    <meta
+      property="og:title"
+      content="IDD GRADUATE SCHOOL TAMA ART UNIVERSITY MEDIA ARTS and INTERACTION DESIGN RESEARCH and PRODUCTION EXHIBITION Archives"
+    />
     <meta
       property="og:description"
       content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
     />
-    <meta property="og:image" content="https://portal.idd-master.com/assets/img/ogp.png" />
+    <meta
+      property="og:image"
+      content="https://portal.idd-master.com/assets/img/ogp.png"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="IDD portal" />
     <meta
@@ -29,10 +33,23 @@
       href="../assets/img/favicon.ico"
       type="image/vnd.microsoft.icon"
     />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="IDD Portal"
+    />
+    <meta
+      name="twitter:description"
+      content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
+    />
+    <meta
+      name="twitter:image"
+      content="https://portal.idd-master.com/assets/img/ogp.png"
+    />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link rel="stylesheet" href="../assets/scss/style.css" />
     <script src="../js/adobeFonts.js"></script>
-    <link rel="stylesheet" href="https://use.typekit.net/kps0ynj.css">
+    <link rel="stylesheet" href="https://use.typekit.net/kps0ynj.css" />
     <script>
       (function(d) {
         var config = {
@@ -114,10 +131,12 @@
             情報デザイン<br />「render」<a class="left">会期：2025/2/28(金)<br />　　 　 　 &ndash; 3/2(日)<br />時間：11:00 &ndash; 18:00<br />会場：町田パリオ
           </a>
         </p> -->
-        <p class="caption">
-          Interaction Design Program<br />"PRISM"<a class="left">Date : 2026.3.20 Fri.&ndash;3.22 Sun.<br />Time : 10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
-        </a>
-      </p>
+          <p class="caption">
+            Interaction Design Program<br />"PRISM"<a class="left"
+              >Date : 2026.3.20 Fri.&ndash;3.22 Sun.<br />Time :
+              10:30&ndash;17:30<br />Venue : MACHIDA PARIO 4F
+            </a>
+          </p>
         </div>
         <a href="https://26.idd-master.com/">
           <div class="link_visual center blue_bg">
@@ -132,14 +151,17 @@
             Art and Media Program<br />"Vertex"<a class="left">Date : 2026.2.14 Sat.&ndash;2.15 Sun.<br />Time : 12:00&ndash;20:00<br />　　　 last day 11:00&ndash;18:00<br />Venue : Art Center NEW B1F
           </a></p> -->
           <p class="caption">
-            Art and Media Program<br />"Vertex"<a class="left">Date : 2026.2.14 Sat.&ndash;2.15 Sun.<br />Time : 12:00&ndash;20:00<br />Venue : Art Center NEW
-          </a></p>
+            Art and Media Program<br />"Vertex"<a class="left"
+              >Date : 2026.2.14 Sat.&ndash;2.15 Sun.<br />Time :
+              12:00&ndash;20:00<br />Venue : Art Center NEW
+            </a>
+          </p>
         </div>
         <!-- <a href="https://megeimaster.wixsite.com/iddartmaster"> -->
-          <div class="link_visual center green_bg">
-            <img src="../assets/img/24_ma.png" alt="メ芸 2026 リンク" />
-          </div>
-        </a>
+        <div class="link_visual center green_bg">
+          <img src="../assets/img/24_ma.png" alt="メ芸 2026 リンク" />
+        </div>
+        <!-- </a> -->
         <div class="link_head center white navy_bg">
           <p class="head">Archives</p>
         </div>
@@ -175,8 +197,7 @@
         <div class="link_year center border navy white_bg">
           <p class="year">AY 2024</p>
         </div>
-        <div class="blank center">
-        </div>
+        <div class="blank center"></div>
         <a href="https://25.idd-master.com/">
           <div class="link_visual center border blue">
             <img src="../assets/img/24_id.png" alt="情デ 2025 リンク" />
@@ -194,8 +215,7 @@
         <div class="link_year center border navy white_bg">
           <p class="year">AY 2023</p>
         </div>
-        <div class="blank center">
-        </div>
+        <div class="blank center"></div>
         <a href="https://24.idd-master.com/">
           <div class="link_visual center border blue">
             <img src="../assets/img/23_id.png" alt="情デ 2024 リンク" />
@@ -222,8 +242,8 @@
           <div class="link_head white navy_bg center">
             <p class="copyright">
               多摩美術大学大学院 情報デザイン研究領域 研究制作展
-              <br />Copyright © 2024-2025 Tama Art University, Graduate School of Art
-              and Design. ALL RIGHTS RESERVED.
+              <br />Copyright © 2024-2025 Tama Art University, Graduate School
+              of Art and Design. ALL RIGHTS RESERVED.
             </p>
           </div>
         </a>
