--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     />
     <link
       rel="shortcut icon"
-      href="../assets/img/favicon.ico"
+      href="https://portal.idd-master.com/assets/img/favicon.ico"
       type="image/vnd.microsoft.icon"
     />
     <link
       rel="icon"
-      href="../assets/img/favicon.ico"
+      href="https://portal.idd-master.com/assets/img/favicon.ico"
       type="image/vnd.microsoft.icon"
     />
     <meta name="twitter:card" content="summary_large_image" />
