--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>IDD Portal</title>
     <meta
       property="og:title"
-      content="IDD GRADUATE SCHOOL TAMA ART UNIVERSITY MEDIA ARTS and INTERACTION DESIGN RESEARCH and PRODUCTION EXHIBITION Archives"
+      content="IDD Portal"
     />
     <meta
       property="og:description"
