--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IDD Portal</title>
-    <meta
-      property="og:title"
-      content="IDD Portal"
-    />
+    <meta property="og:title" content="IDD Portal" />
     <meta
       property="og:description"
       content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
@@ -34,10 +31,7 @@
       type="image/vnd.microsoft.icon"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="IDD Portal"
-    />
+    <meta name="twitter:title" content="IDD Portal" />
     <meta
       name="twitter:description"
       content="多摩美術大学大学院 情報デザイン研究領域 研究制作展 ポータルサイト"
@@ -51,13 +45,34 @@
     <script src="../js/adobeFonts.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/kps0ynj.css" />
     <script>
-      (function(d) {
+      (function (d) {
         var config = {
-          kitId: 'irb8rkb',
-          scriptTimeout: 3000,
-          async: true
-        },
-        h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+            kitId: "irb8rkb",
+            scriptTimeout: 3000,
+            async: true,
+          },
+          h = d.documentElement,
+          t = setTimeout(function () {
+            h.className =
+              h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+          }, config.scriptTimeout),
+          tk = d.createElement("script"),
+          f = false,
+          s = d.getElementsByTagName("script")[0],
+          a;
+        h.className += " wf-loading";
+        tk.src = "https://use.typekit.net/" + config.kitId + ".js";
+        tk.async = true;
+        tk.onload = tk.onreadystatechange = function () {
+          a = this.readyState;
+          if (f || (a && a != "complete" && a != "loaded")) return;
+          f = true;
+          clearTimeout(t);
+          try {
+            Typekit.load(config);
+          } catch (e) {}
+        };
+        s.parentNode.insertBefore(tk, s);
       })(document);
     </script>
   </head>
@@ -99,7 +114,7 @@
             <p class="ma">media art</p>
           </div>
           <div class="main_visual center green_bg">
-            <img src="../assets/img/24_ma.png" alt="メ芸 メインビジュアル" />
+            <img src="../assets/img/25_ma.png" alt="メ芸 メインビジュアル" />
           </div>
         </div>
         <div class="main_edge green_bg">
@@ -157,11 +172,11 @@
             </a>
           </p>
         </div>
-        <!-- <a href="https://megeimaster.wixsite.com/iddartmaster"> -->
-        <div class="link_visual center green_bg">
-          <img src="../assets/img/24_ma.png" alt="メ芸 2026 リンク" />
-        </div>
-        <!-- </a> -->
+        <a href="https://www.idd.tamabi.ac.jp/art/exhibit/vertex/">
+          <div class="link_visual center green_bg">
+            <img src="../assets/img/25_ma.png" alt="メ芸 2026 リンク" />
+          </div>
+        </a>
         <div class="link_head center white navy_bg">
           <p class="head">Archives</p>
         </div>
